UY-1541 do not require client password for local OAuth verification