@@ -1,10 +1,9 @@
 
 package pl.edu.icm.unity.oauth.rp.local;
 
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -22,9 +21,9 @@ import com.nimbusds.oauth2.sdk.token.AccessToken;
 import eu.emi.security.authn.x509.helpers.BinaryCertChainValidator;
 import eu.unicore.util.httpclient.ServerHostnameCheckingMode;
 import pl.edu.icm.unity.base.authn.AuthenticationFlowDefinition;
+import pl.edu.icm.unity.base.authn.AuthenticationFlowDefinition.Policy;
 import pl.edu.icm.unity.base.authn.AuthenticationRealm;
 import pl.edu.icm.unity.base.authn.RememberMePolicy;
-import pl.edu.icm.unity.base.authn.AuthenticationFlowDefinition.Policy;
 import pl.edu.icm.unity.base.endpoint.EndpointConfiguration;
 import pl.edu.icm.unity.base.endpoint.ResolvedEndpoint;
 import pl.edu.icm.unity.base.entity.EntityParam;
@@ -46,18 +45,24 @@ import pl.edu.icm.unity.stdext.identity.UsernameIdentity;
 
 public class LocalOAuthRPAuthenticatorTest extends DBIntegrationTestBase
 {
-	private static final String OAUTH_ENDP_CFG_FORMAT = "unity.oauth2.as.issuerUri=https://localhost:%s/oauth2\n"
-			+ "unity.oauth2.as.signingCredential=MAIN\n" + "unity.oauth2.as.clientsGroup=/oauth-clients\n"
-			+ "unity.oauth2.as.usersGroup=/oauth-users\n" + "#unity.oauth2.as.translationProfile=\n"
-			+ "unity.oauth2.as.scopes.1.name=foo\n"
-			+ "unity.oauth2.as.scopes.1.description=Provides access to foo info\n"
-			+ "unity.oauth2.as.scopes.1.attributes.1=stringA\n" + "unity.oauth2.as.scopes.1.attributes.2=o\n"
-			+ "unity.oauth2.as.scopes.1.attributes.3=email\n" + "unity.oauth2.as.scopes.2.name=bar\n"
-			+ "unity.oauth2.as.scopes.2.description=Provides access to bar info\n"
-			+ "unity.oauth2.as.scopes.2.attributes.1=c\n" + "unity.oauth2.as.refreshTokenIssuePolicy=ALWAYS\n";
+	private static final String OAUTH_ENDP_CFG_FORMAT = """
+			unity.oauth2.as.issuerUri=https://localhost:%s/oauth2
+			unity.oauth2.as.signingCredential=MAIN
+			unity.oauth2.as.clientsGroup=/oauth-clients
+			unity.oauth2.as.usersGroup=/oauth-users
+			#unity.oauth2.as.translationProfile=
+			unity.oauth2.as.scopes.1.name=foo
+			unity.oauth2.as.scopes.1.description=Provides access to foo info
+			unity.oauth2.as.scopes.1.attributes.1=stringA
+			unity.oauth2.as.scopes.1.attributes.2=o
+			unity.oauth2.as.scopes.1.attributes.3=email
+			unity.oauth2.as.scopes.2.name=bar
+			unity.oauth2.as.scopes.2.description=Provides access to bar info
+			unity.oauth2.as.scopes.2.attributes.1=c
+			unity.oauth2.as.refreshTokenIssuePolicy=ALWAYS
+			""";
 
-	private static final String OAUTH_RP_CFG_INTERNAL = "unity.oauth2-local-rp.requiredScopes.1=sc1\n"
-			+ "unity.oauth2-local-rp.credential=credential1\n";
+	private static final String OAUTH_RP_CFG_INTERNAL = "unity.oauth2-local-rp.requiredScopes.1=sc1\n";
 
 	private static final String JWT_ENDP_CFG = "unity.jwtauthn.credential=MAIN\n";
 
@@ -127,8 +132,8 @@ public class LocalOAuthRPAuthenticatorTest extends DBIntegrationTestBase
 				OAuthTestUtils.getOAuthProcessor(tokensMan), client.getEntityId());
 		AccessToken ac = resp1.getAccessToken();
 
-		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, new URL(getBaseUrl() + "/jwt-int/token"));
-		httpReqRaw.setAuthorization("Bearer " + ac.getValue() + ",Basic Y2xpZW50QTpwYXNzd29yZA==");
+		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, new URI(getBaseUrl() + "/jwt-int/token"));
+		httpReqRaw.setAuthorization("Bearer " + ac.getValue());
 
 		HTTPRequest httpReq = new HttpRequestConfigurer().secureRequest(httpReqRaw, new BinaryCertChainValidator(true),
 				ServerHostnameCheckingMode.NONE);
@@ -137,25 +142,9 @@ public class LocalOAuthRPAuthenticatorTest extends DBIntegrationTestBase
 	}
 	
 	@Test
-	public void shouldFailWhenOnlyToken() throws Exception
-	{
-		AuthorizationSuccessResponse resp1 = OAuthTestUtils.initOAuthFlowHybrid(OAuthTestUtils.getConfig(),
-				OAuthTestUtils.getOAuthProcessor(tokensMan), client.getEntityId());
-		AccessToken ac = resp1.getAccessToken();
-
-		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, new URL(getBaseUrl() + "/jwt-int/token"));
-		httpReqRaw.setAuthorization("Bearer " + ac.getValue());
-
-		HTTPRequest httpReq = new HttpRequestConfigurer().secureRequest(httpReqRaw, new BinaryCertChainValidator(true),
-				ServerHostnameCheckingMode.NONE);
-		HTTPResponse response = httpReq.send();
-		assertEquals(500, response.getStatusCode());
-	}
-	
-	@Test
 	public void shouldFailWhenOnlyClientCredential() throws Exception
 	{
-		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, new URL(getBaseUrl() + "/jwt-int/token"));
+		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, new URI(getBaseUrl() + "/jwt-int/token"));
 		httpReqRaw.setAuthorization("Basic Y2xpZW50QTpwYXNzd29yZA==");
 
 		HTTPRequest httpReq = new HttpRequestConfigurer().secureRequest(httpReqRaw, new BinaryCertChainValidator(true),
@@ -173,7 +162,7 @@ public class LocalOAuthRPAuthenticatorTest extends DBIntegrationTestBase
 				OAuthTestUtils.getOAuthProcessor(tokensMan), client.getEntityId());
 		AccessToken ac = resp1.getAccessToken();
 
-		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, new URL(getBaseUrl() + "/jwt-int/token"));
+		HTTPRequest httpReqRaw = new HTTPRequest(Method.GET, new URI(getBaseUrl() + "/jwt-int/token"));
 		httpReqRaw.setAuthorization("Bearer " + ac.getValue() + ",Basic Y2xpZW50MjpjbGllbnQy");
 
 		HTTPRequest httpReq = new HttpRequestConfigurer().secureRequest(httpReqRaw, new BinaryCertChainValidator(true),
